[S05P21C103-79] [BE-kskyu610] chore: 프로젝트 수정

--- a/backend/auth/build.gradle
+++ b/backend/auth/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'net.bis5.mattermost4j:mattermost4j-core:0.22.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
