--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "express-http-proxy": "^1.6.2",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^2.0.0-beta.6",
@@ -40,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://meeting.ssafy.com"
 }
