[S05P21C103-145] [BE-kskyu610] test: PostService 클래스 / 생성 테스트 작성

--- a/backend/mattermost-api/build.gradle
+++ b/backend/mattermost-api/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.data:spring-data-hadoop:2.5.0.RELEASE'
+    implementation 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.25.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
