[S05P21C103-132] [BE-ks03102] feat: redis 연결 테스트

--- a/backend/post/build.gradle
+++ b/backend/post/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework.data', name: 'spring-data-redis', version: '2.5.4'
+
 }
 
 test {
