--- a/backend/mattermost-api/.gitignore
+++ b/backend/mattermost-api/.gitignore
@@ -25,7 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+application-local.properties
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
