--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "express-http-proxy": "^1.6.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-calendar": "^3.4.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-moment": "^1.1.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
