[S05P21C103-161] [BE-kskyu610] feat: StudentPoint 클래스 / JPA 연동

--- a/backend/mattermost-api/build.gradle
+++ b/backend/mattermost-api/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'net.bis5.mattermost4j:mattermost4j-core:0.22.1'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
-    implementation 'org.springframework.data:spring-data-hadoop:3.2.2.RELEASE'
+    implementation 'org.springframework.data:spring-data-hadoop:2.5.0.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.apache.hbase:hbase-client:2.3.6'
     implementation 'org.apache.hbase:hbase:2.3.6'
     implementation 'org.apache.hbase:hbase-mapreduce:2.3.6'
