--- a/backend/mattermost-api/build.gradle
+++ b/backend/mattermost-api/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.data:spring-data-hadoop:2.5.0.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.h2database:h2'
     implementation 'org.apache.hbase:hbase-client:2.3.6'
     implementation 'org.apache.hbase:hbase:2.3.6'
     implementation 'org.apache.hbase:hbase-mapreduce:2.3.6'
