[S05P21C103-182] [BE-mymysuzy0627] chore: local의 mysql과 연결

--- a/backend/auth/build.gradle
+++ b/backend/auth/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'net.bis5.mattermost4j:mattermost4j-core:0.22.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
