--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-spring.profiles.active=local
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=ssafy
+#spring.datasource.password=root
+
 server.port=8083
 
+spring.jpa.properties.hibernate.show_sql=true
+logging.level.org.hibernate.type=trace
+
 mattermost.url=https://meeting.ssafy.com
+
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create
