[S05P21C103-160] [BE-kskyu610] fix: 배포 환경 설정

--- a/backend/mattermost-api/build.gradle
+++ b/backend/mattermost-api/build.gradle
@@ -24,10 +24,11 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.data:spring-data-hadoop:2.5.0.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'mysql:mysql-connector-java'
     runtimeOnly 'com.h2database:h2'
-    implementation 'org.apache.hbase:hbase-client:3.0.0-alpha-1'
-    implementation 'org.apache.hbase:hbase:3.0.0-alpha-1'
-    implementation 'org.apache.hbase:hbase-mapreduce:3.0.0-alpha-1'
+    implementation 'org.apache.hbase:hbase-client:2.3.6'
+    implementation 'org.apache.hbase:hbase:2.3.6'
+    implementation 'org.apache.hbase:hbase-mapreduce:2.3.6'
     implementation 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.25.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
