--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=ssafy
-#spring.datasource.password=root
+spring.datasource.password=ssafyssafy
 
 server.port=8083
 
