--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=ssafyssafy
+spring.datasource.password=root
 
 server.port=8083
 
@@ -10,5 +10,5 @@ logging.level.org.hibernate.type=trace
 
 mattermost.url=https://meeting.ssafy.com
 
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
