--- a/backend/mattermost-api/src/main/resources/application-prod.properties
+++ b/backend/mattermost-api/src/main/resources/application-prod.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io::3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=ssafyssafy
+spring.datasource.password=root
