--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-markdown": "^7.0.1",
     "react-moment": "^1.1.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
