[S05P21C103-111] [BE-jukim10101] feat: student 기능 오류 고침

--- a/backend/student/src/main/resources/application-local.properties
+++ b/backend/student/src/main/resources/application-local.properties
@@ -1,9 +1,13 @@
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.driver-class-url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-url.username=
-pring.datasource.driver-class-url.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/test
+spring.datasource.driver-class-url.username=multicampus
+spring.datasource.driver-class-url.password=
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 spring.jpa.properties.hibernate.format_sql=true
