--- a/backend/mattermost-api/build.gradle
+++ b/backend/mattermost-api/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java'
     runtimeOnly 'com.h2database:h2'
-    implementation 'org.apache.hbase:hbase-client:2.3.6'
+    implementation ('org.apache.hbase:hbase-client:2.3.6') {
+        exclude group: 'ch.qos.logback'
+    }
     implementation 'org.apache.hbase:hbase:2.3.6'
     implementation 'org.apache.hbase:hbase-mapreduce:2.3.6'
     implementation 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.25.1'
