[BE-kskyu610] fix: properties 파일 수정

--- a/backend/mattermost-api/src/main/resources/application-prod.properties
+++ b/backend/mattermost-api/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ ssafycial.channel.id=9yxif5ehwirt7eo4wyz34af67e
 spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io::3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
+
