[BE-mymysuzy0627] chore: server.address 추가

--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io:3306/al_ssel_ssa_job?autoRe
 spring.datasource.username=root
 spring.datasource.password=root
 
+server.address=j5c103.p.ssafy.io
 server.port=8083
 
 spring.jpa.properties.hibernate.show_sql=true
