--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -1,23 +1,15 @@
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
-#spring.datasource.username=root
-#spring.datasource.password=root
-#
-#server.port=8083
-#
-#spring.jpa.properties.hibernate.show_sql=true
-#logging.level.org.hibernate.type=trace
-#
-#mattermost.url=https://meeting.ssafy.com
-#
-##spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://j5c103.p.ssafy.io:3306/al_ssel_ssa_job?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=root
 
-<<<<<<< HEAD
 server.address=j5c103.p.ssafy.io
-=======
-spring.profiles.active=local
->>>>>>> 06d7e81 ([FE-rladmswlek] feat: json 파일로 기능 구현)
 server.port=8083
 
-mattermost.url=https://meeting.ssafy.com
+spring.jpa.properties.hibernate.show_sql=true
+logging.level.org.hibernate.type=trace
+
+mattermost.url=https://meeting.ssafy.com/
+
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
