--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8083
 spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate.type=trace
 
-mattermost.url=https://meeting.ssafy.com/
+mattermost.url=https://meeting.ssafy.com
 
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=create
